[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhouse.dataloader"
version = "0.0.1"
description = "A Python library for distributed data loading of OpenHouse tables"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["datafusion==51.0.0", "pyiceberg @ file:///Users/sarangat/oss/iceberg-python/main"]

[project.optional-dependencies]
dev = ["ruff>=0.9.0", "pytest>=8.0.0", "numpy>=1.26.0", "ray[default]>=2.0.0", "psutil>=5.9.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/openhouse"]

[tool.pytest.ini_options]
markers = ["slow: long-running experiments (run with: uv run pytest -m slow -s)"]
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
